backend functions implemented / common color scheme

--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,8 @@
     <!-- include source files here... -->
 
     <script src="test/models/user.js"></script>
+    <script src="test/views/app.js"></script>
+    <script src="test/views/settings.js"></script>
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
 
