backend functions update

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 			<div id="content">
 				<div title="Main page" class="panel" selected="true" id="main">
 					<!-- a href="#" onclick="$.ui.toggleSideMenu(true)">open side menu</a -->
-					<h2 class="username"></h2>
+					<h2 class="username">left swipe to open settings menu</h2>
 				</div>
 				
 				<!-- signup page -->
