slideshow added on main page

--- a/test/index.html
+++ b/test/index.html
@@ -22,6 +22,9 @@
     <script src="test/models/user.js"></script>
     <script src="test/views/app.js"></script>
     <script src="test/views/settings.js"></script>
+    <script src="test/views/slider.js"></script>
+    <script src="test/models/document.js"></script>
+    <script src="test/collections/documents.js"></script>
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
 
