--- a/test/index.html
+++ b/test/index.html
@@ -25,6 +25,7 @@
     <script src="test/views/slider.js"></script>
     <script src="test/models/document.js"></script>
     <script src="test/collections/documents.js"></script>
+    <script src="test/views/carousel.js"></script>
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
 
