--- a/test/index.html
+++ b/test/index.html
@@ -26,6 +26,9 @@
     <script src="test/models/document.js"></script>
     <script src="test/collections/documents.js"></script>
     <script src="test/views/carousel.js"></script>
+    <script src="test/views/fullPage.js"></script>
+    <script src="test/views/full-page.js"></script>
+    <script src="test/views/carousel-slide.js"></script>
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
 
