--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,8 @@
 						<input type="submit" value="Reset password" class="button" />
 					</form>
 				</div>
+				
+				<div class="panel" title="Search results" id="search-page"></div>
 			</div>
 			
 			<!-- settings nav goes here -->
@@ -106,6 +108,7 @@
         <script src="bower_components/handlebars/handlebars.js"></script>
 		<script src="scripts/vendor/underscore.def.js"></script>
 		<script src="bower_components/swiper/dist/idangerous.swiper.min.js"></script>
+		<script src="scripts/vendor/lurk.js"></script>
 		<script src="scripts/vendor/base64.js"></script>
         <!-- endbuild -->
 	
@@ -124,6 +127,7 @@
         <script src="scripts/views/carousel.js"></script>
         <script src="scripts/views/full-page.js"></script>
         <script src="scripts/views/carousel-slide.js"></script>
+        <script src="scripts/views/search.js"></script>
         <!-- endbuild -->
 </body>
 </html>
