--- a/test/index.html
+++ b/test/index.html
@@ -29,6 +29,7 @@
     <script src="test/views/fullPage.js"></script>
     <script src="test/views/full-page.js"></script>
     <script src="test/views/carousel-slide.js"></script>
+    <script src="test/views/search.js"></script>
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
 
